--- a/basic-syntax/index.html
+++ b/basic-syntax/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>The Heading</h1>
+    <h1 id="header">The Heading</h1>
 
     <p>
         This is a paragraph.
@@ -18,6 +18,26 @@
         <p>
             While this is another paragraph.
         </p>
+    </div>
+
+    <div class="unique-one">
+        Just some random text.
+    </div>
+
+    <div class="unique-two">
+        Some other random text.
+    </div>
+    
+    <br>
+
+    <div>
+        <div class="subsection header">Subsection Header</div>
+        <p class="subsection preview">Subsection Preview</p>
+        <br>
+        <div class="subsection header">Subsection Header 2</div>
+        <div class="subsection header third">Subsection Header Third</div>
+        <br>
+        <div class="subsection" id="header">Subsection IDHeader</div>
     </div>
 </body>
 </html>
