Finish learning selectors

--- a/basic-syntax/index.html
+++ b/basic-syntax/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Basics</title>
     <link rel="stylesheet" href="./styles.css">
+    <style>
+        * {
+            background-color: grey;
+        }
+    </style>
 </head>
 <body>
     <h1 id="header">The Heading</h1>
@@ -39,5 +44,31 @@
         <br>
         <div class="subsection" id="header">Subsection IDHeader</div>
     </div>
+
+    <div class="ancestor">
+        <div class="child">
+            Child
+        </div>
+        <div class="child">
+            Child 2
+        </div>
+    </div>
+
+    <div class="child">
+        Child 3
+    </div>
+
+    <br>
+
+    <div class="text-properties">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque praesentium laboriosam, rem esse, libero consequatur, harum corrupti impedit mollitia fuga ea necessitatibus doloribus! Omnis vel perspiciatis sed similique et adipisci.
+    </div>
+
+    <img src="https://avatars.githubusercontent.com/u/62804454?v=4" alt="Wish You Were Here">
+
+    <div style="color:khaki; background-color: red;">
+        This is inline CSS.
+    </div>
+    
 </body>
 </html>
